--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -4,7 +4,7 @@
 		font-size: 1.1rem;
 	}
 	main {
-		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-columns: 1fr;
 	}
 	article:nth-child(3) {
 		grid-column: span 1;
