--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -25,6 +25,10 @@
 		margin-left: 60px;
 	
 	}
+	table{
+		margin-left: 40px;
+		margin-bottom: 20px;
+		max-width: 600px;
 		
 	nav a {
 		font-size: 1rem;
@@ -32,5 +36,8 @@
 
 	article:nth-child(3) {
 		grid-column: span 2;
+	}
+	.header-2{
+		column-span: all;
 	}
 }
