--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -21,8 +21,11 @@
 	/* Horizontal Menu Examples */
 	/* Flex *********************/
  		nav ul { display: flex; }
-		nav ul li { flex: 1 1 auto; }
-	
+		nav ul li { flex: 1 1 auto; 
+		}
+	h2{
+		margin-left: 30px;
+	}
 
 	p{
 		font-family: 'Linden Hill', serif;
