--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -29,7 +29,7 @@ header,
 nav,
 main,
 footer {
-	max-width: 767px;
+
 	margin: 0 auto;
 	font-family: 'Merriweather', serif;
 }
@@ -41,15 +41,17 @@ h1 {
 h2 {
 	color: #536878;
 	font-family: 'Merriweather', serif;
-	margin-left: 30px;
+	margin-left: 15px;
 }
 p{
 	font-family: 'Linden Hill', serif;
 	font-size: 20px;
 	max-width: 250px;
 	text-align: justify;
-	margin-left: 60px;
-
+	margin-left: 30px;
+}
+main div{
+	border: solid 1px black;
 }
 table{
 	margin-left: 40px;
